--- a/Lession 3/Lesson 3.ipynb
+++ b/Lession 3/Lesson 3.ipynb
@@ -2,25 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "73bfd0ae-c427-4db7-bcef-2062faf8d5ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "col = ['day','temperature','windspeed','event']\n",
-    "# by using the skiprows i am able to skip the number of rows (starting)\n",
-    "# header = None ( means to define that the data don't contains the any header )\n",
-    "# names = col ( this will make new column names )\n",
-    "# df = pd.read_csv('data.csv',skiprows=1, header=None, names = col)\n",
-    "df = pd.read_csv(\"data.csv\",names = col)\n",
-    "df.set_index('day',inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "233d3f5a-59ac-4e84-83ad-946023db8b1a",
    "metadata": {},
    "outputs": [
     {
@@ -44,90 +27,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>day</th>\n",
        "      <th>temperature</th>\n",
        "      <th>windspeed</th>\n",
        "      <th>event</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>30-04-2025</th>\n",
+       "      <th>0</th>\n",
+       "      <td>30-04-2025</td>\n",
        "      <td>24</td>\n",
        "      <td>6</td>\n",
        "      <td>rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>01-05-2025</th>\n",
+       "      <th>1</th>\n",
+       "      <td>01-05-2025</td>\n",
        "      <td>54</td>\n",
        "      <td>4</td>\n",
        "      <td>sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>02-05-2025</th>\n",
+       "      <th>2</th>\n",
+       "      <td>02-05-2025</td>\n",
        "      <td>34</td>\n",
        "      <td>6</td>\n",
        "      <td>sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>03-05-2025</th>\n",
-       "      <td>54</td>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
+       "      <td>03-05-2025</td>\n",
+       "      <td>na</td>\n",
+       "      <td>-</td>\n",
        "      <td>rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>04-05-2025</th>\n",
+       "      <th>4</th>\n",
+       "      <td>04-05-2025</td>\n",
        "      <td>23</td>\n",
        "      <td>3</td>\n",
        "      <td>rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>05-05-2025</th>\n",
+       "      <th>5</th>\n",
+       "      <td>05-05-2025</td>\n",
        "      <td>88</td>\n",
        "      <td>2</td>\n",
        "      <td>sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06-05-2025</th>\n",
+       "      <th>6</th>\n",
+       "      <td>06-05-2025</td>\n",
        "      <td>23</td>\n",
        "      <td>7</td>\n",
        "      <td>snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>07-05-2025</th>\n",
+       "      <th>7</th>\n",
+       "      <td>07-05-2025</td>\n",
        "      <td>12</td>\n",
        "      <td>3</td>\n",
-       "      <td>snow</td>\n",
+       "      <td>na</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            temperature  windspeed  event\n",
-       "day                                      \n",
-       "30-04-2025           24          6   rain\n",
-       "01-05-2025           54          4  sunny\n",
-       "02-05-2025           34          6  sunny\n",
-       "03-05-2025           54          3   rain\n",
-       "04-05-2025           23          3   rain\n",
-       "05-05-2025           88          2  sunny\n",
-       "06-05-2025           23          7   snow\n",
-       "07-05-2025           12          3   snow"
+       "          day temperature windspeed  event\n",
+       "0  30-04-2025          24         6   rain\n",
+       "1  01-05-2025          54         4  sunny\n",
+       "2  02-05-2025          34         6  sunny\n",
+       "3  03-05-2025          na         -   rain\n",
+       "4  04-05-2025          23         3   rain\n",
+       "5  05-05-2025          88         2  sunny\n",
+       "6  06-05-2025          23         7   snow\n",
+       "7  07-05-2025          12         3     na"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "import pandas as pd\n",
+    "col = ['day','temperature','windspeed','event']\n",
+    "# by using the skiprows i am able to skip the number of rows (starting)\n",
+    "# header = None ( means to define that the data don't contains the any header )\n",
+    "# names = col ( this will make new column names )\n",
+    "df = pd.read_csv(\"../data.csv\",names = col, header=None ,nrows=5, na_values=['na','-'])\n"
    ]
   }
  ],
