--- a/Tutorial 4/1_fillna.ipynb
+++ b/Tutorial 4/1_fillna.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "3981e74b",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,95 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8369/2515589863.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "/tmp/ipykernel_5424/3467999480.py:2: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df = pd.read_csv('data.csv', parse_dates=['day'])\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-04-30</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-05</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-06</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-07</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "pandas._libs.tslibs.timestamps.Timestamp"
+       "            temperature  windspeed  event\n",
+       "day                                      \n",
+       "2025-04-30         24.0        6.0   rain\n",
+       "2025-05-03          NaN        NaN   rain\n",
+       "2025-05-04          NaN        3.0   rain\n",
+       "2025-05-05         88.0        2.0  sunny\n",
+       "2025-05-06         23.0        7.0    NaN\n",
+       "2025-05-07          NaN        3.0   rain"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +106,432 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('data.csv', parse_dates=['day'])\n",
-    "type(df['day'][0])"
+    "df.set_index('day', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3ec53587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-04-30</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-03</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-04</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-05</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-06</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-07</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            temperature  windspeed  event\n",
+       "day                                      \n",
+       "2025-04-30         24.0        6.0   rain\n",
+       "2025-05-03          0.0        0.0   rain\n",
+       "2025-05-04          0.0        3.0   rain\n",
+       "2025-05-05         88.0        2.0  sunny\n",
+       "2025-05-06         23.0        7.0      0\n",
+       "2025-05-07          0.0        3.0   rain"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.fillna(0)\n",
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "68d593e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-04-30</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-03</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-04</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-05</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-06</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>No Event</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-07</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            temperature  windspeed     event\n",
+       "day                                         \n",
+       "2025-04-30         24.0        6.0      rain\n",
+       "2025-05-03          0.0        0.0      rain\n",
+       "2025-05-04          0.0        3.0      rain\n",
+       "2025-05-05         88.0        2.0     sunny\n",
+       "2025-05-06         23.0        7.0  No Event\n",
+       "2025-05-07          0.0        3.0      rain"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.fillna({\n",
+    "    'temperature': 0,\n",
+    "    'windspeed': 0,\n",
+    "    'event': 'No Event'\n",
+    "})\n",
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "fa99ca81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5424/840256733.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  new_df = df.fillna(method='ffill', limit=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-04-30</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-03</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-05</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-06</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-07</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            temperature  windspeed  event\n",
+       "day                                      \n",
+       "2025-04-30         24.0        6.0   rain\n",
+       "2025-05-03         24.0        6.0   rain\n",
+       "2025-05-04          NaN        3.0   rain\n",
+       "2025-05-05         88.0        2.0  sunny\n",
+       "2025-05-06         23.0        7.0  sunny\n",
+       "2025-05-07         23.0        3.0   rain"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.fillna(method='ffill', limit=1)\n",
+    "# new_df = df.fillna(method='bfill')\n",
+    "\n",
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0cd615cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5424/2733137342.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  new_df = df.fillna( method='bfill',axis='columns')\n",
+      "/tmp/ipykernel_5424/2733137342.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  new_df = df.fillna( method='bfill',axis='columns')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-04-30</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-03</th>\n",
+       "      <td>rain</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-04</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-05</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-06</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-05-07</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           temperature windspeed  event\n",
+       "day                                    \n",
+       "2025-04-30        24.0       6.0   rain\n",
+       "2025-05-03        rain      rain   rain\n",
+       "2025-05-04         3.0       3.0   rain\n",
+       "2025-05-05        88.0       2.0  sunny\n",
+       "2025-05-06        23.0       7.0    NaN\n",
+       "2025-05-07         3.0       3.0   rain"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.fillna( method='bfill',axis='columns')\n",
+    "new_df"
    ]
   }
  ],
