--- a/Tutorial 4/2_interpolate.ipynb
+++ b/Tutorial 4/2_interpolate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "id": "511c582b",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6496/2734711398.py:4: FutureWarning: DataFrame.interpolate with object dtype is deprecated and will raise in a future version. Call obj.infer_objects(copy=False) before interpolating instead.\n",
+      "/tmp/ipykernel_6515/3879307098.py:5: FutureWarning: DataFrame.interpolate with object dtype is deprecated and will raise in a future version. Call obj.infer_objects(copy=False) before interpolating instead.\n",
       "  new_df = df.interpolate(method='time')\n"
      ]
     },
@@ -147,13 +147,14 @@
        "2025-07-05         33.0   18.000000  Cloudy"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "df = pd.read_csv('data.csv',parse_dates=['Day'])\n",
     "df.set_index('Day', inplace=True)\n",
     "new_df = df.interpolate(method='time')\n",
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "83452985",
    "metadata": {},
    "outputs": [
@@ -243,7 +244,7 @@
        "2025-07-04         26.0        18.0  Cloudy"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "b3527208",
    "metadata": {},
    "outputs": [
@@ -263,7 +264,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6496/3689833012.py:4: FutureWarning: DataFrame.interpolate with object dtype is deprecated and will raise in a future version. Call obj.infer_objects(copy=False) before interpolating instead.\n",
+      "/tmp/ipykernel_6515/7029930.py:5: FutureWarning: DataFrame.interpolate with object dtype is deprecated and will raise in a future version. Call obj.infer_objects(copy=False) before interpolating instead.\n",
       "  df.interpolate(method='time', inplace=True)\n"
      ]
     },
@@ -308,21 +309,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-06-23</th>\n",
-       "      <td>29.750000</td>\n",
+       "      <td>29.333333</td>\n",
        "      <td>16.000000</td>\n",
-       "      <td>No Event Defined</td>\n",
+       "      <td>---------snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-06-24</th>\n",
-       "      <td>28.500000</td>\n",
+       "      <td>27.666667</td>\n",
        "      <td>13.000000</td>\n",
-       "      <td>No Event Defined</td>\n",
+       "      <td>---------snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-06-25</th>\n",
-       "      <td>27.250000</td>\n",
+       "      <td>26.000000</td>\n",
        "      <td>10.000000</td>\n",
-       "      <td>No Event Defined</td>\n",
+       "      <td>---------snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-06-26</th>\n",
@@ -344,9 +345,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-06-29</th>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>12.500000</td>\n",
-       "      <td>No Event Defined</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>---------snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-06-30</th>\n",
@@ -362,15 +363,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-07-02</th>\n",
-       "      <td>30.666667</td>\n",
-       "      <td>13.555556</td>\n",
-       "      <td>No Event Defined</td>\n",
+       "      <td>31.500000</td>\n",
+       "      <td>9.666667</td>\n",
+       "      <td>---------snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-07-03</th>\n",
-       "      <td>28.333333</td>\n",
-       "      <td>15.777778</td>\n",
-       "      <td>No Event Defined</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>---------snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-07-04</th>\n",
@@ -389,37 +390,39 @@
        "</div>"
       ],
       "text/plain": [
-       "            Temperature  Wind Speed             Event\n",
-       "2025-06-21    32.000000    8.000000             Windy\n",
-       "2025-06-22    31.000000   19.000000            Cloudy\n",
-       "2025-06-23    29.750000   16.000000  No Event Defined\n",
-       "2025-06-24    28.500000   13.000000  No Event Defined\n",
-       "2025-06-25    27.250000   10.000000  No Event Defined\n",
-       "2025-06-26    26.000000    7.000000             Sunny\n",
-       "2025-06-27    23.000000    8.000000            Stormy\n",
-       "2025-06-28    20.000000   12.000000             Rainy\n",
-       "2025-06-29    24.000000   12.500000  No Event Defined\n",
-       "2025-06-30    28.000000   13.000000            Cloudy\n",
-       "2025-07-01    33.000000   11.333333            Stormy\n",
-       "2025-07-02    30.666667   13.555556  No Event Defined\n",
-       "2025-07-03    28.333333   15.777778  No Event Defined\n",
-       "2025-07-04    26.000000   18.000000            Cloudy\n",
-       "2025-07-05    33.000000   18.000000            Cloudy"
+       "            Temperature  Wind Speed          Event\n",
+       "2025-06-21    32.000000    8.000000          Windy\n",
+       "2025-06-22    31.000000   19.000000         Cloudy\n",
+       "2025-06-23    29.333333   16.000000  ---------snow\n",
+       "2025-06-24    27.666667   13.000000  ---------snow\n",
+       "2025-06-25    26.000000   10.000000  ---------snow\n",
+       "2025-06-26    26.000000    7.000000          Sunny\n",
+       "2025-06-27    23.000000    8.000000         Stormy\n",
+       "2025-06-28    20.000000   12.000000          Rainy\n",
+       "2025-06-29    29.000000   16.000000  ---------snow\n",
+       "2025-06-30    28.000000   13.000000         Cloudy\n",
+       "2025-07-01    33.000000   11.333333         Stormy\n",
+       "2025-07-02    31.500000    9.666667  ---------snow\n",
+       "2025-07-03    30.000000    8.000000  ---------snow\n",
+       "2025-07-04    26.000000   18.000000         Cloudy\n",
+       "2025-07-05    33.000000   18.000000         Cloudy"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dt = pd.date_range('2025-06-21','2025-07-05')\n",
+    "\n",
     "idx = pd.DatetimeIndex(dt)\n",
     "df = df.reindex(idx)\n",
     "df.interpolate(method='time', inplace=True)\n",
     "df.fillna({\n",
     "    'Event':'No Event Defined'\n",
     "}, inplace=True)\n",
+    "\n",
     "df"
    ]
   }
