--- a/Tutorial 9/1_pivot.ipynb
+++ b/Tutorial 9/1_pivot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "dd96b7bd",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "2025-07-06         25     27      24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,6 +162,117 @@
     "import pandas as pd\n",
     "df = pd.read_csv('data.csv')\n",
     "df.pivot(index='Day',columns='City', values='Temperature (C)') # the values indecates which column's value to show on the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "88a0a4db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Temperature (C)</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Wind Speed (km/h)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Day</th>\n",
+       "      <th>2025-06-22</th>\n",
+       "      <th>2025-06-23</th>\n",
+       "      <th>All</th>\n",
+       "      <th>2025-06-22</th>\n",
+       "      <th>2025-06-23</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>City</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bangalore</th>\n",
+       "      <td>30.00</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>28.000</td>\n",
+       "      <td>10.50</td>\n",
+       "      <td>12.50</td>\n",
+       "      <td>11.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mumbai</th>\n",
+       "      <td>23.50</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>25.250</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>15.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>26.75</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>26.625</td>\n",
+       "      <td>14.75</td>\n",
+       "      <td>12.25</td>\n",
+       "      <td>13.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Temperature (C)                    Wind Speed (km/h)             \\\n",
+       "Day            2025-06-22 2025-06-23     All        2025-06-22 2025-06-23   \n",
+       "City                                                                        \n",
+       "Bangalore           30.00       26.0  28.000             10.50      12.50   \n",
+       "Mumbai              23.50       27.0  25.250             19.00      12.00   \n",
+       "All                 26.75       26.5  26.625             14.75      12.25   \n",
+       "\n",
+       "                 \n",
+       "Day         All  \n",
+       "City             \n",
+       "Bangalore  11.5  \n",
+       "Mumbai     15.5  \n",
+       "All        13.5  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data2.csv')\n",
+    "df.pivot_table(index='City', columns='Day', aggfunc='mean', margins=True)\n"
    ]
   }
  ],
